fix notify item tasks

--- a/shopmanager/templates/trades/check_order_template.html
+++ b/shopmanager/templates/trades/check_order_template.html
@@ -78,8 +78,8 @@
 </ul>
 </div>
 <div class="accordion-group1">
-<div class="accordion-heading1" style="margin: 5px 0px"><a
-	class="accordion-toggle1" style="padding: 0px 15px">商品列表››</a></div>
+<div class="accordion-heading1" style="margin: 5px 0px">
+<a class="accordion-toggle1" style="padding: 0px 15px">商品列表››</a></div>
 <div id="collapseTwo" class="collapse1">
 <div class="accordion-inner1">
 <form class="well form-search"><input type="text" name="q" class="input-medium search-query" action="/trades/orderplus/" method="GET">
