--- a/shopmanager/templates/trades/mergesuccess.html
+++ b/shopmanager/templates/trades/mergesuccess.html
@@ -24,9 +24,9 @@
 			    	<td>{{ trade.buyer_nick }}</td>
 			    	<td>{{ trade.pay_time|date:'Y-m-d H:i:s' }}</td>
 			    	<td>{% if trade.has_merge %}
-			    	    <img src="/static/admin/img/admin/icon-yes.gif" alt="yes">
+			    	    <img src="{{ STATIC_URL }}admin/img/icon-yes.gif" alt="yes">
 			    	    {% else %}
-			    	    <img src="/static/admin/img/admin/icon-no.gif" alt="no">
+			    	    <img src="{{ STATIC_URL }}admin/img/icon-no.gif" alt="no">
 			    	    {% endif %}
 			    	</td>
 			    	<td>{{ trade.reason_code }}</td>
