--- a/shopmanager/templates/trades/tradepostsuccess.html
+++ b/shopmanager/templates/trades/tradepostsuccess.html
@@ -26,7 +26,7 @@
 					<td>{{ trade.seller_nick }}</td>
 			    	<td>{{ trade.buyer_nick }}</td>
 			    	<td>{{ trade.pay_time }}</td>
-			    	<td><img src="/static/admin/img/admin/icon-yes.gif" alt="yes"></td>
+			    	<td><img src="{{ STATIC_URL }}admin/img/icon-yes.gif" alt="yes"></td>
 			    </tr>
 			    {% endif %}
 			    {% endfor %}
@@ -39,7 +39,7 @@
 					<td>{{ trade.seller_nick }}</td>
 			    	<td>{{ trade.buyer_nick }}</td>
 			    	<td>{{ trade.pay_time|date:'Y-m-d H:i:s' }}</td>
-			    	<td><img src="/static/admin/img/admin/icon-no.gif" alt="no"></td>
+			    	<td><img src="{{ STATIC_URL }}admin/img/icon-no.gif" alt="no"></td>
 			    </tr>
 			    {% endif %}
 			    {% endfor %}
