--- a/shopmanager/templates/trades/check_order_template.html
+++ b/shopmanager/templates/trades/check_order_template.html
@@ -77,7 +77,7 @@
 <a class="accordion-toggle1" style="padding: 0px 15px">商品列表››</a></div>
 <div id="collapseTwo" class="collapse1">
 <div class="accordion-inner1">
-<form class="well form-search">
+<div class="well form-search">
 	<input type="text" id="id-search-q" class="input-medium search-query" >
 	<button id="id-search-prod" class="btn">商品搜索</button>
 	<div style="height: 10px"></div>
@@ -96,7 +96,8 @@
 		<tbody>
 		</tbody>
 	</table>
-</form>
+</div>
+<div>
 <table class="table table-bordered">
 	<thead>
 		<tr>
@@ -136,6 +137,7 @@
 		{% endfor %}
 	</tbody>
 </table>
+</div>
 </div>
 </div>
 </div>
