fix trade urls.py and views.py

--- a/shopmanager/site_media/static/css/admin/checkorder.css
+++ b/shopmanager/site_media/static/css/admin/checkorder.css
@@ -162,3 +162,9 @@ tr {
 .badge-warning1 {
     background-color: #F89406;
 }
+
+.btn-mini {
+	padding: 2px 4px;
+	font-size: 11px;
+	line-height: 14px;
+}
