--- a/shopmanager/templates/users/pull_online_items.html
+++ b/shopmanager/templates/users/pull_online_items.html
@@ -1,6 +1,6 @@
-{% extends "trades/base.html" %}
+{% extends "users/base.html" %}
 
-{% block title%} 更新用户待发货订单 {% endblock %}
+{% block title%} 更新用户线上商品 {% endblock %}
 
 {% block navbar %}<div style="margin-top:30px;"><a href="{{ request.META.HTTP_REFERER }}" class="btn btn-large btn-success" target="_blank">打开上一页</a></div>{% endblock %}
 
@@ -9,7 +9,7 @@
 	<div>
 		<div style="display:block;">
 		  <fieldset>
-		  	<legend>更新用户待发货订单</legend>
+		  	<legend>更新用户线上商品</legend>
 			  <table class="table table-bordered table-striped table-condensed">
 			    <tr>
 			      <th>用户ID</th><th>用户昵称</th><th>下单任务状态</th><th>错误信息</th>
