--- a/shopmanager/templates/trades/check_order_template.html
+++ b/shopmanager/templates/trades/check_order_template.html
@@ -124,8 +124,8 @@
 			</td>
 			<td>{{ order.num }}</td>
 			<td>{{ order.price }}</td>
-			<td>{% if order.gift_type == 0 %}实付订单{% elif order.gift_type == 1 %}客服赠送 {% elif order.gift_type == 2 %}
-			满就送{% elif order.gift_type == 3 %}组合拆分{% endif %}</td>
+			<td>{% if order.gift_type == 0 %}实付{% elif order.gift_type == 1 %}赠送 {% elif order.gift_type == 2 %}
+			满就送{% elif order.gift_type == 3 %}拆分{% endif %}</td>
 			<td>{% if order.is_rule_match %}<button class="change-order btn-mini" idx="{{ forloop.counter }}" 
 				oid="{{ order.id }}" >修改</button>{% endif %}
 			    {% if order.gift_type == 1 %}<button class="delete-order btn-mini" oid="{{ order.id }}">删除</button>{% endif %}
