fix items admin sync stock

--- a/shopmanager/templates/users/pull_online_items.html
+++ b/shopmanager/templates/users/pull_online_items.html
@@ -1,6 +1,6 @@
 {% extends "users/base.html" %}
 
-{% block title%} 更新用户线上商品 {% endblock %}
+{% block title%} 下载用户线上商品 {% endblock %}
 
 {% block navbar %}<div style="margin-top:30px;"><a href="{{ request.META.HTTP_REFERER }}" class="btn btn-large btn-success" target="_blank">打开上一页</a></div>{% endblock %}
 
