--- a/shopmanager/templates/trades/check_order_template.html
+++ b/shopmanager/templates/trades/check_order_template.html
@@ -28,15 +28,15 @@
 <div class="accordion-heading1">
 <div style="padding: 2px 15px">
 <div class="row-through">
+<div style="margin: 0px; display: inline-block; width: 25%"><label
+	class="simple-label">收货人: </label><span id="id_receiver">{{ trade.receiver_name }}</span></div>
 <div style="margin: 0px; display: inline-block; width: 30%"><label
-	class="simple-label">收货人: </label>{{ trade.receiver_name }}</div>
-<div style="margin: 0px; display: inline-block; width: 25%"><label
-	class="simple-label">手机: </label>{{ trade.receiver_mobile }}</div>
-<div style="margin: 0px; display: inline-block; width: 25%"><label
-	class="simple-label">固话: </label>{{ trade.receiver_phone }}</div>
+	class="simple-label">手机: </label><span id="id_mobile">{{ trade.receiver_mobile }}</span></div>
+<div style="margin: 0px; display: inline-block; width: 30%"><label
+	class="simple-label">固话: </label><span id="id_phone">{{ trade.receiver_phone }}</span></div>
 </div>
-<div class="row-through"><label class="simple-label">地址: </label>{{ trade.receiver_state }}，{{ trade.receiver_city }}，
-{{ trade.receiver_district }}，{{ trade.receiver_address }}</div>
+<div class="row-through"><label class="simple-label">地址: </label><span id="id_address">{{ trade.receiver_state }}，{{ trade.receiver_city }}，
+{{ trade.receiver_district }}，{{ trade.receiver_address }}</span></div>
 </div>
 <a id="collapseOne" class="goog-zippy-header goog-zippy-expanded" aria-expanded="true" style="padding: 0px 15px">修改地址››</a></div>
 <div id="addrContent" class="accordion-inner1">
@@ -88,7 +88,7 @@
 				<td>商品简称</td>
 				<td>规格</td>
 				<td>数量</td>
-				<td>正品单价</td>
+				<td>单价</td>
 				<td>操作</td>
 			</tr>
 		</thead>
@@ -105,8 +105,8 @@
 			<td>商品简称</td>
 			<td>规格</td>
 			<td>数量</td>
-			<td>正品单价</td>
-			<td>订单类型</td>
+			<td>单价</td>
+			<td>类型</td>
 			<td>操作</td>
 		</tr>
 	</thead>
@@ -126,11 +126,11 @@
 			</td>
 			<td>{{ order.num }}</td>
 			<td>{{ order.price }}</td>
-			<td>{% if order.gift_type == 0 %}实付{% elif order.gift_type == 1 %}赠送 {% elif order.gift_type == 2 %}
-			满就送{% elif order.gift_type == 3 %}拆分{% endif %}</td>
+			<td>{% if order.gift_type == 0 %}实付{% elif order.gift_type == 1 %}赠送{% elif order.gift_type == 2 %}
+			满就送{% elif order.gift_type == 3 %}拆分{% elif order.gift_type == 4 %}换货{% endif %}</td>
 			<td>{% if order.is_rule_match %}<button class="change-order btn-mini" idx="{{ forloop.counter }}" 
 				oid="{{ order.id }}" >修改</button>{% endif %}
-			    {% if order.gift_type == 1 %}<button class="delete-order btn-mini" oid="{{ order.id }}">删除</button>{% endif %}
+			    <button class="delete-order btn-mini" oid="{{ order.id }}">删除</button>
 			</td>
 		</tr>
 		{% endfor %}
