fix trades models and admin

--- a/shopmanager/templates/trades/repullsuccess.html
+++ b/shopmanager/templates/trades/repullsuccess.html
@@ -12,7 +12,7 @@
 		  	<legend>重新下载订单状态</legend>
 			  <table class="table table-bordered table-striped table-condensed">
 			    <tr>
-			      <th>订单ID</th><th>淘宝订单编号</th><th>店铺名称</th><th>买家昵称</th><th>付款日期</th><th>审核状态</th><th>问题编号</th>
+			      <th>订单ID</th><th>淘宝订单编号</th><th>店铺名称</th><th>买家昵称</th><th>付款日期</th><th>下载状态</th><th>问题编号</th>
 			    </tr>
 			    <tr><td colspan="7">下载成功的订单{{ success_trades|length }}</td></tr>
 			    {% for trade in success_trades %}
