--- a/shopmanager/templates/trades/check_order_template.html
+++ b/shopmanager/templates/trades/check_order_template.html
@@ -2,10 +2,11 @@
 {% with trade=object.trade logistics=object.logistics %}
 <div class="body1" style="margin-left: auto; margin-right: auto; width: 720px">
 <div class="row-through"><input type="hidden" id="id_check_trade" name="trade_id" value="{{ trade.id }}">
-<div style="margin: 0px; display: inline-block; width: 25%"><label class="simple-label">订单号: </label>{{ trade.tid }}</div>
-<div style="margin: 0px; display: inline-block; width: 25%"><label class="simple-label">买家: </label>{{ trade.buyer_nick }}</div>
+<div style="margin: 0px; display: inline-block; width: 22%"><label class="simple-label">订单号: </label>{{ trade.tid }}</div>
+<div style="margin: 0px; display: inline-block; width: 18%"><label class="simple-label">买家: </label>{{ trade.buyer_nick }}</div>
 <div style="margin: 0px; display: inline-block; width: 20%"><label class="simple-label">店铺: </label>{{ trade.seller_nick }}</div>
 <div style="margin: 0px; display: inline-block; width: 25%"><label class="simple-label">付款时间: </label>{{ trade.pay_time }}</div>
+<div style="margin: 0px; display: inline-block; width: 12%"><label class="simple-label">实付款: </label>{{ trade.payment }}</div>
 </div>
 <div class="row-through">
 <div class="alert-message buyer"><strong>买家留言: </strong>{{ trade.buyer_message }}</div>
@@ -116,20 +117,20 @@
 			<td>{{ order.id }}</td>
 			<td>{{ order.outer_id }}</td>
 			<td>{{ order|prod_name }}</td>
-			<td>{% if order.is_rule_match %} 
+			<td>
 				<select id="id-select-ordersku-{{ forloop.counter }}" name="id_order_sku">
+					<option value="">---------</option>
 					{% for sku in order|prod_skus %}
-					<option value="{{ sku.outer_id }}">{{ sku.properties_name }}</option>
+					<option value="{{ sku.outer_id }}" {% if order.outer_sku_id == sku.outer_id %}selected{% endif %}>{{ sku.properties_name }}</option>
 					{% endfor %}
 				</select> 
-			    {% else %}{{ order.sku_properties_name }}{% endif %}
 			</td>
 			<td>{{ order.num }}</td>
 			<td>{{ order.price }}</td>
 			<td>{% if order.gift_type == 0 %}实付{% elif order.gift_type == 1 %}赠送{% elif order.gift_type == 2 %}
-			满就送{% elif order.gift_type == 3 %}拆分{% elif order.gift_type == 4 %}换货{% endif %}</td>
-			<td>{% if order.is_rule_match %}<button class="change-order btn-mini" idx="{{ forloop.counter }}" 
-				oid="{{ order.id }}" >修改</button>{% endif %}
+				满就送{% elif order.gift_type == 3 %}拆分{% elif order.gift_type == 4 %}换货{% endif %}</td>
+			<td><button class="change-order btn-mini" idx="{{ forloop.counter }}" 
+				oid="{{ order.id }}" >修改</button>
 			    <button class="delete-order btn-mini" oid="{{ order.id }}">删除</button>
 			</td>
 		</tr>
