--- a/shopmanager/templates/trades/check_order_template.html
+++ b/shopmanager/templates/trades/check_order_template.html
@@ -2,11 +2,12 @@
 {% with trade=object.trade logistics=object.logistics %}
 <div class="body1" style="margin-left: auto; margin-right: auto; width: 720px">
 <div class="row-through"><input type="hidden" id="id_check_trade" name="trade_id" value="{{ trade.id }}">
-<div style="margin: 0px; display: inline-block; width: 22%"><label class="simple-label">订单号: </label>{{ trade.tid }}</div>
-<div style="margin: 0px; display: inline-block; width: 18%"><label class="simple-label">买家: </label>{{ trade.buyer_nick }}</div>
-<div style="margin: 0px; display: inline-block; width: 20%"><label class="simple-label">店铺: </label>{{ trade.seller_nick }}</div>
-<div style="margin: 0px; display: inline-block; width: 25%"><label class="simple-label">付款时间: </label>{{ trade.pay_time }}</div>
-<div style="margin: 0px; display: inline-block; width: 12%"><label class="simple-label">实付款: </label>{{ trade.payment }}</div>
+<div style="margin: 0px; display: inline-block; width: 30%"><label class="simple-label">订单号: </label>{{ trade.tid }}</div>
+<div style="margin: 0px; display: inline-block; width: 33%"><label class="simple-label">买家: </label>{{ trade.buyer_nick }}</div>
+<div style="margin: 0px; display: inline-block; width: 33%"><label class="simple-label">店铺: </label>{{ trade.seller_nick }}</div><br>
+<div style="margin: 0px; display: inline-block; width: 33%"><label class="simple-label">付款时间: </label>{{ trade.pay_time }}</div>
+<div style="margin: 0px; display: inline-block; width: 33%"><label class="simple-label">实付款: </label>{{ trade.payment }}</div>
+<div style="margin: 0px; display: inline-block; width: 33%"><label class="simple-label">邮费: </label>{{ trade.post_fee }}</div>
 </div>
 <div class="row-through">
 <div class="alert-message buyer"><strong>买家留言: </strong>{{ trade.buyer_message }}</div>
@@ -44,17 +45,17 @@
 <form id="id-addr-form" class="form-inline">
 <div>
     <label class="simple-label">收货人信息: </label> 
-	<input type="text" id="id_receiver_name" class="input-small1" placeholder="收货人" name="receiver_name">
-	<input type="text" id="id_receiver_mobile" class="input-small1" placeholder="手机" name="receiver_mobile"> 
-	<input type="text" id="id_receiver_phone" class="input-small1" placeholder="固话" name="receiver_phone"> 
+	<input type="text" id="id_receiver_name" class="input-small1" value="{{ trade.receiver_name }}" name="receiver_name">
+	<input type="text" id="id_receiver_mobile" class="input-small1" value="{{ trade.receiver_mobile }}"  name="receiver_mobile"> 
+	<input type="text" id="id_receiver_phone" class="input-small1" value="{{ trade.receiver_phone }}" name="receiver_phone"> 
 	<input type="button" id="addr-from-submit" class="btn btn-small" style="float: right" value="确定修改">
 </div>
 <div style="margin-top: 5px">
 	<label class="simple-label">新地址:</label> 
-	<input type="text" id="id_receiver_state" class="input-small1" placeholder="省" name="receiver_state"> 
-	<input type="text" id="id_receiver_city" class="input-small1" placeholder="市" name="receiver_city"> 
-	<input type="text" id="id_receiver_district" class="input-small1" placeholder="区" name="receiver_district"> 
-	<input type="text" id="id_receiver_address" style="width: 310px" placeholder="详细地址" name="receiver_address">
+	<input type="text" id="id_receiver_state" class="input-small1" value="{{ trade.receiver_state }}" name="receiver_state"> 
+	<input type="text" id="id_receiver_city" class="input-small1" value="{{ trade.receiver_city }}" name="receiver_city"> 
+	<input type="text" id="id_receiver_district" class="input-small1" value="{{ trade.receiver_district }}" name="receiver_district"> 
+	<input type="text" id="id_receiver_address" style="width: 310px" value="{{ trade.receiver_address }}" name="receiver_address">
 </div>
 </form>
 </div>
