fix review order func

--- a/shopmanager/templates/trades/check_order_template.html
+++ b/shopmanager/templates/trades/check_order_template.html
@@ -64,18 +64,12 @@
 </div>
 <div style="padding: 9px 15px">
 <ul class="thumbnails1">
-	{% if trade.has_memo %}
-	<li><span class="badge1 badge-warning1">有留言</span></li>
-	{% endif %} {% if trade.has_refund %}
-	<li><span class="badge1 badge-warning1">待退款</span></li>
-	{% endif %} {% if trade.has_out_stock %}
-	<li><span class="badge1 badge-warning1">缺货</span></li>
-	{% endif %} {% if trade.has_rule_match %}
-	<li><span class="badge1 badge-warning1">信息不全</span></li>
-	{% endif %} {% if trade.has_merge %}
-	<li><span class="badge1 badge-warning1">订单合并</span>
-	{% endif %} {% if trade.has_sys_err %}
-	<li><span class="badge1 badge-warning1">系统错误</span>{% endif %}
+	{% if trade.has_memo %}<li><span class="badge1 badge-warning1">有留言</span></li>{% endif %} 
+	{% if trade.has_refund %}<li><span class="badge1 badge-warning1">待退款</span></li>{% endif %} 
+	{% if trade.has_out_stock %}<li><span class="badge1 badge-warning1">缺货</span></li>{% endif %} 
+	{% if trade.has_rule_match %}<li><span class="badge1 badge-warning1">信息不全</span></li>{% endif %} 
+	{% if trade.has_merge %}<li><span class="badge1 badge-warning1">订单合并</span>{% endif %} 
+	{% if trade.has_sys_err %}<li><span class="badge1 badge-warning1">系统错误</span>{% endif %}
 </ul>
 </div>
 <div class="accordion-group1">
