--- a/shopmanager/templates/trades/review_order_template.html
+++ b/shopmanager/templates/trades/review_order_template.html
@@ -122,6 +122,10 @@
 	.bottom-area{
 		text-align:center;
 	}
+	.status-label {
+		background-color:green;
+		color:white;
+	}
     </style>
   </head>
 {% load trade_tags %} 
@@ -129,7 +133,7 @@
   <body>
 	<div >
 		<fieldset>
-			<legend>问题列表</legend>
+			<legend>问题列表(淘宝订单状态:<span class="status-label">{{ trade.status_name }}</span>，系统状态:<span class="status-label">{{ trade.sys_status_name }}</span>)</legend>
 			<div style="padding: 9px 15px">
 				<ul id="id-trade-problems" class="thumbnails1">
 					{% if trade.new_memo %}<li><span class="badge1 badge-warning1">新留言</span></li>{% endif %} 
@@ -240,13 +244,13 @@
 				alert('物流单号不能为空');
 			}else{
 				$.post('/trades/logistic/',
-					{'trade_id':trade_id,'logistic_code':logistic_code,'out_sid':out_sid},
-					function(data, textStatus){
+					{'trade_id':trade_id,'logistic_code':logistic_code,'out_sid':out_sid,'format':'json'},
+					function(data){
 						if (data.code == 0){
 							$('#id_logistic_name').html(data.response_content.logistic_company_name);
 							$('#id_out_sid').html(data.response_content.out_sid);
 						}else{
-							alert('快递单号修改失败:'+data.response_content);
+							alert('快递单号修改失败:'+data.response_error);
 						}
 					},
 					'json');
@@ -255,9 +259,10 @@
 		
 		var review_order  = function(evt){
 			var trade_id      = $('#id_review_trade').val();
-			$.post('/trades/revieworder/'+trade_id+'/',
-				{},
-				function(data, textStatus){
+			var post_url      = '/trades/review/'+trade_id+'/';
+			$.post(post_url,
+				{'format':'json'},
+				function(data){
 					if(data.code == 0){
 						$('#id-trade-problems').html('');
 						$('#id-review-order-btn').hide();
