--- a/shopmanager/templates/admin/trades/change_list.html
+++ b/shopmanager/templates/admin/trades/change_list.html
@@ -98,4 +98,17 @@
       </form>
     </div>
   </div>
+  <!-- 
+<script type="text/javascript">
+	var actions = document.getElementsByClassName('actions');
+	if (actions.length>0){
+		var submit_btns = actions[0].getElementsByClassName('button');
+		if (submit_btns.length>0){
+			var submit_btn = submit_btns[0];
+			submit_btn.onclick = function(evt){
+				submit_btn.disabled = true;
+			};
+		}
+	}
+</script> -->
 {% endblock %}
