fix item sku name update and autolist integrate

--- a/shopmanager/templates/autolist/itemtable.html
+++ b/shopmanager/templates/autolist/itemtable.html
@@ -9,7 +9,7 @@
 <div class='list_top'>
 
 <div style="margin:5px; float:right">
-    <button class="btn btn-info" type=button onclick="window.open('/app/autolist/timetable/','_blank');return false;">上架时间表</button>
+    <button class="btn btn-info" type=button onclick="window.open('/app/autolist/timetable/?user_id={{ user_id }}','_blank');return false;">上架时间表</button>
     <button class="btn btn-info" type=button onclick="window.open('/app/autolist/logs/','_blank');return false;">操作记录</button>
 </div>
 
