--- a/shopmanager/templates/autolist/tablesummary.html
+++ b/shopmanager/templates/autolist/tablesummary.html
@@ -18,13 +18,13 @@
                 <tr>
                     <th>序号</th>
                     <th>商品类别</th>
-                    <th class="timetable" day='1'><a href="/app/autolist/weektable/1/" target="_blank">周一</a></th>
-                    <th class="timetable" day='2'><a href="/app/autolist/weektable/2/" target="_blank">周二</a></th>
-                    <th class="timetable" day='3'><a href="/app/autolist/weektable/3/" target="_blank">周三</a></th>
-                    <th class="timetable" day='4'><a href="/app/autolist/weektable/4/" target="_blank">周四</a></th>
-                    <th class="timetable" day='5'><a href="/app/autolist/weektable/5/" target="_blank">周五</a></th>
-                    <th class="timetable" day='6'><a href="/app/autolist/weektable/6/" target="_blank">周六</a></th>
-                    <th class="timetable" day='7'><a href="/app/autolist/weektable/7/" target="_blank">周日</a></th>
+                    <th class="timetable" day='1'><a href="/app/autolist/weektable/1/?user_id={{ user_id }}" target="_blank">周一</a></th>
+                    <th class="timetable" day='2'><a href="/app/autolist/weektable/2/?user_id={{ user_id }}" target="_blank">周二</a></th>
+                    <th class="timetable" day='3'><a href="/app/autolist/weektable/3/?user_id={{ user_id }}" target="_blank">周三</a></th>
+                    <th class="timetable" day='4'><a href="/app/autolist/weektable/4/?user_id={{ user_id }}" target="_blank">周四</a></th>
+                    <th class="timetable" day='5'><a href="/app/autolist/weektable/5/?user_id={{ user_id }}" target="_blank">周五</a></th>
+                    <th class="timetable" day='6'><a href="/app/autolist/weektable/6/?user_id={{ user_id }}" target="_blank">周六</a></th>
+                    <th class="timetable" day='7'><a href="/app/autolist/weektable/7/?user_id={{ user_id }}" target="_blank">周日</a></th>
                     <th>总计</th>
                 </tr>
                 {% for c in cats %}
