--- a/shopmanager/templates/admin/trades/change_list.html
+++ b/shopmanager/templates/admin/trades/change_list.html
@@ -58,7 +58,12 @@
           {% block object-tools-items %}
             <li>
               <a href="{% url cl.opts|admin_urlname:'add' %}{% if is_popup %}?_popup=1{% endif %}" class="addlink">
-                {% blocktrans with cl.opts.verbose_name as name %}Add {{ name }}{% endblocktrans %}
+                {% blocktrans with cl.opts.verbose_name as name %}新{{ name }}{% endblocktrans %}
+              </a>
+             </li>
+             <li>
+              <a href="{% url cl.opts|admin_urlname:'add' %}{% if is_popup %}?_popup=1{% endif %}" class="addlink" target="_blank">
+                新退换货单
               </a>
             </li>
           {% endblock %}
@@ -98,17 +103,16 @@
       </form>
     </div>
   </div>
-  <!-- 
-<script type="text/javascript">
-	var actions = document.getElementsByClassName('actions');
-	if (actions.length>0){
-		var submit_btns = actions[0].getElementsByClassName('button');
-		if (submit_btns.length>0){
-			var submit_btn = submit_btns[0];
-			submit_btn.onclick = function(evt){
-				submit_btn.disabled = true;
-			};
+	<script type="text/javascript">
+		var actions = document.getElementsByClassName('actions');
+		if (actions.length>0){
+			var submit_btns = actions[0].getElementsByClassName('button');
+			if (submit_btns.length>0){
+				var submit_btn = submit_btns[0];
+				submit_btn.onclick = function(evt){
+					submit_btn.style.display = "none";
+				};
+			}
 		}
-	}
-</script> -->
+	</script> 
 {% endblock %}
