--- a/shopmanager/templates/trades/return_and_exchange_template.html
+++ b/shopmanager/templates/trades/return_and_exchange_template.html
@@ -131,51 +131,11 @@
 {% load trade_tags %} 
 {% with trade=object.trade logistics=object.logistics %}
   <body>
-	<div >
+	<div>
 		<fieldset>
-			<legend>问题列表(淘宝订单状态:<span class="status-label">{{ trade.status_name }}</span>，系统状态:<span class="status-label">{{ trade.sys_status_name }}</span>)</legend>
-			<div style="padding: 9px 15px">
-				<ul id="id-trade-problems" class="thumbnails1">
-					{% if trade.new_memo %}<li><span class="badge1 badge-warning1">新留言</span></li>{% endif %} 
-					{% if trade.new_refund %}<li><span class="badge1 badge-warning1">新退款</span></li>{% endif %} 
-					{% if trade.order_modify %}<li><span class="badge1 badge-warning1">订单修改</span></li>{% endif %} 
-					{% if trade.addr_modify %}<li><span class="badge1 badge-warning1">修改地址</span></li>{% endif %}
-				</ul>
-			</div>
-		</fieldset>
-		<fieldset>
-			<legend>基本信息</legend>
+			<legend>退换货单</legend>
 			<div class="row-through">
-				<input type="hidden" id="id_review_trade" name="trade_id" value="{{ trade.id }}">
-				<input type="hidden" id="id_trade_status" name="trade_status" value="{{ trade.sys_status }}">
-				<div  class="trade_info"><label class="simple-label">订单号: </label>{{ trade.id }}</div>
-				<div  class="trade_info"><label class="simple-label">买家: </label>{{ trade.buyer_nick }}</div>
-				<div  class="trade_info"><label class="simple-label">店铺: </label>{{ trade.seller_nick }}</div>
-				<div  class="trade_info"><label class="simple-label">付款时间: </label>{{ trade.pay_time }}</div>
-				<div  class="trade_info"><label class="simple-label">发货日期: </label>{{ trade.consign_time }}</div>
-				<br><br>
-				<div  class="trade_info"><label class="simple-label">实付款: </label>{{ trade.payment }}</div>
-				<div  class="trade_info"><label class="simple-label">邮费: </label>{{ trade.post_fee }}</div>
-				<div  class="trade_info"><label class="simple-label">快递公司: </label>
-					<span id="id_logistic_name" class="logistic-label">{{ trade.logistics_company.name }}</span></div>
-				<div  class="trade_info"><label class="simple-label">快递单号: </label>
-					<span id="id_out_sid" class="logistic-label">{{ trade.out_sid }}</span></div>
-				<div  class="trade_info"><label class="simple-label">问题编号: </label>{{ trade.reason_code }}</div>
-				<br><br>
-				<div  class="trade_info"><label class="simple-label">收货人: </label>{{ trade.receiver_name }}</div>
-				<div  class="trade_info"><label class="simple-label">省: </label>{{ trade.receiver_state }}</div>
-				<div  class="trade_info"><label class="simple-label">市: </label>{{ trade.receiver_city }}</div>
-				<div  class="trade_info"><label class="simple-label">区: </label>{{ trade.receiver_district }}</div>
-				<div  class="trade_info">
-					<label class="simple-label">联系方式: </label>
-					{% if trade.receiver_mobile %}{{ trade.receiver_mobile }}{% else %}{{ trade.receiver_phone }}{% endif %}
-				</div>
-				<br><br>
-				<div style="display: inline-block; width: 100%;" ><label class="simple-label">详细地址: </label>{{ trade.receiver_address }}</div>
-			</div>
-			<div class="row-through">
-				<div class="alert-message buyer"><strong>买家留言: </strong>{{ trade.buyer_message }}</div>
-				<div class="alert-message seller"><strong>卖家留言: </strong>{{ trade.seller_memo }}</div>
+				
 			</div>
 			<div>
 				<div id="id_express_content" class="accordion-inner1">
